# alkanes-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: main.rs  wallet.rs
src/commands/: apply.rs  deploy.rs  execute.rs  gen_blocks.rs  mod.rs  simulate.rs  trace.rs  tx_status.rs  wallet.rs
